# cuteweb

./: Cargo.toml  Rocket.toml  db.sqlite  mock.pseudocode  parquet_etl.pseudocode
assets/: Rocket.toml
pipeline_macro/: Cargo.toml
pipeline_macro/src/: lib.rs
pipeline_macro/tests/ui/fail/: different_tuple_elements.rs  different_tuple_elements.stderr  tuple_wrong_arity.rs  tuple_wrong_arity.stderr
pipeline_macro/tests/ui/pass/: direct_and_inplace.rs  only_inplace.rs  single_direct.rs
src/: lib.rs  main.rs
src/auth/: guard.rs  mod.rs  user.rs
src/backend/: login.rs  mod.rs  setvar.rs
src/db/: init.rs  mod.rs  projects.rs
src/frontend/: login.rs  mod.rs  project.rs
src/modules/: mod.rs  queries.rs
src/modules/fields/: mod.rs
src/modules/main_table/: mod.rs
static/profiles/: genetique.json
static/styles/: default.css
static/templates/: login.html.j2
static/templates/common/: base.html.j2
static/templates/fields/: fields.html.j2
static/templates/layout/: main_layout.html.j2
static/templates/layouts/: main_layout.html.j2
static/templates/macros/: tab_widget.html.j2
static/templates/main_table/: main_table.html.j2
