[workspace]
members = [".", "pipeline_macro"]
resolver = "2"

[package]
name = "cuteweb"
version = "0.1.0"
edition = "2024"

[dependencies]
pipeline_macro = { path = "pipeline_macro" }

rocket = { version = "0.5", features = ["secrets", "json"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "time",
] }
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["serde"] }
thiserror = "1.0"
chrono = "0.4.42"
diacritics = "0.2.2"
rocket_dyn_templates = "0.2.0"
intersection = "1.0.0"
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["native-tls-vendored"] }
lazy-regex = "3.4.2"

duckdb = { version = "1.1.5", features = ["bundled"] }
rocket-include-dir = "1.1.2"
include_dir = "0.7.4"
minijinja = { version = "2.17.1", features = ["loader"] }
